SLI-821 Rework HTML rule description display (#567)
* Extract rule html viewer in a separate class
* Share more code between toolwindow and settings
* Move rule params from HTML to native components