@@ -26,94 +26,67 @@ import java.util.Locale;
 import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import org.apache.commons.lang.StringEscapeUtils;
+import org.sonarsource.sonarlint.core.commons.IssueSeverity;
+import org.sonarsource.sonarlint.core.commons.RuleType;
 
 import static org.sonarlint.intellij.config.Settings.getGlobalSettings;
 
 public class RuleDescription {
   private final String key;
+  
+  private final String name;
+  
+  private final IssueSeverity severity;
+  
+  private final RuleType type;
   private final String html;
+  private final List<Param> params;
 
-  public static RuleDescription from(String key, String name, String severity, @Nullable String type, String fullDescription) {
-    return from(key, name, severity, type, fullDescription, Collections.emptyList());
+  public static RuleDescription from(String ruleKey, String name, IssueSeverity severity, RuleType type, String fullDescription) {
+    return from(ruleKey, name, severity, type, fullDescription, List.of());
   }
 
-  public static RuleDescription from(String key, String name, String severity, @Nullable String type, @Nullable String fullDescription, List<Param> params) {
-    return new RuleDescription(key, buildHtml(key, name, severity, type, fullDescription, params));
+  public static RuleDescription from(String ruleKey, String name, IssueSeverity severity, RuleType type, @Nullable String fullDescription, List<Param> params) {
+    return new RuleDescription(ruleKey, name, severity, type, fullDescription, params);
   }
 
-  private RuleDescription(String key, String html) {
+  private RuleDescription(String key, String name, IssueSeverity severity, RuleType type, String html, List<Param> params) {
     this.key = key;
+    this.name = name;
+    this.severity = severity;
+    this.type = type;
     this.html = html;
+    this.params = params;
   }
 
   public String getKey() {
     return key;
   }
 
+  public String getName() {
+    return name;
+  }
+
+  public IssueSeverity getSeverity() {
+    return severity;
+  }
+
+  public RuleType getType() {
+    return type;
+  }
+
+  public List<Param> getParams() {
+    return params;
+  }
+
   public String getHtml() {
     return html;
   }
 
-  private static String buildHtml(String key, String name, String severity, @Nullable String type, @Nullable String fullDescription, List<Param> params) {
+  private static String buildHtml(String ruleKey, @Nullable String fullDescription) {
     var builder = new StringBuilder();
-    builder.append("<h2>")
-      .append(StringEscapeUtils.escapeHtml(name))
-      .append("</h2>");
-    appendRuleAttributesHtmlTable(key, severity, type, builder);
-    builder.append("<br />")
-      .append(fullDescription);
-    if (!params.isEmpty()) {
-      builder.append(renderRuleParams(params, key));
-    }
+    builder.append(fullDescription);
     return builder.toString();
-  }
-
-  public static void appendRuleAttributesHtmlTable(String ruleKey, String ruleSeverity, @org.jetbrains.annotations.Nullable String ruleType, StringBuilder builder) {
-    // apparently some css properties are not supported
-    var imgAttributes = "valign=\"top\" hspace=\"3\" height=\"16\" width=\"16\"";
-
-    builder.append("<table><tr>");
-    if (ruleType != null) {
-      builder.append("<td>").append("<img ").append(imgAttributes).append(" src=\"file:///type/").append(ruleType).append("\"/></td>")
-        .append("<td class=\"pad\"><b>").append(clean(ruleType)).append("</b></td>");
-    }
-    builder.append("<td>").append("<img ").append(imgAttributes).append(" src=\"file:///severity/").append(ruleSeverity).append("\"/></td>")
-      .append("<td class=\"pad\"><b>").append(clean(ruleSeverity)).append("</b></td>")
-      .append("<td><b>").append(ruleKey).append("</b></td>")
-      .append("</tr></table>");
-  }
-
-  private static String clean(String txt) {
-    return StringUtil.capitalize(txt.toLowerCase(Locale.ENGLISH).replace("_", " "));
-  }
-
-  private static String renderRuleParams(List<Param> params, String ruleKey) {
-    return "<table class=\"rule-params\">" +
-      "<caption><h2>Parameters</h2></caption>" +
-      "<tr class='thead'>" +
-      "<td colspan=\"2\">" +
-      "Following parameter values can be set in <a href=\"#rule\">Rule Settings</a>. " +
-      "In connected mode, server side configuration overrides local settings." +
-      "</td>" +
-      "</tr>" +
-      params.stream().map(param -> renderRuleParam(param, ruleKey)).collect(Collectors.joining("\n")) +
-      "</table>";
-  }
-
-  private static String renderRuleParam(Param param, String ruleKey) {
-    var paramDescription = param.description != null ? ("<p>" + param.description + "</p>") : "";
-    var paramDefaultValue = param.defaultValue;
-    var defaultValue = paramDefaultValue != null ? paramDefaultValue : "(none)";
-    var currentValue = getGlobalSettings().getRuleParamValue(ruleKey, param.name).orElse(defaultValue);
-    return "<tr class='tbody'>" +
-    // The <br/> elements are added to simulate a "vertical-align: top" (not supported by Java 11 CSS renderer)
-      "<th>" + param.name + "<br/><br/></th>" +
-      "<td>" +
-      paramDescription +
-      "<p><small>Current value: <code>" + currentValue + "</code></small></p>" +
-      "<p><small>Default value: <code>" + defaultValue + "</code></small></p>" +
-      "</td>" +
-      "</tr>";
   }
 
   public static class Param {
@@ -125,6 +98,18 @@ public class RuleDescription {
       this.name = name;
       this.description = description;
       this.defaultValue = defaultValue;
+    }
+
+    public String getName() {
+      return name;
+    }
+
+    public String getDescription() {
+      return description;
+    }
+
+    public String getDefaultValue() {
+      return defaultValue;
     }
   }
 }
